--- a/static/css/index.css
+++ b/static/css/index.css
@@ -15,7 +15,7 @@
   }
   /* button */
   .neon-btn{
-      position: relative; 
+      /* position: relative; */
       display: inline-block;
       padding: 15px 30px;
       /* color: #2196f3; */
