--- a/templates/Bookform.html
+++ b/templates/Bookform.html
@@ -63,7 +63,7 @@
             <input type="submit" value="Book" class="btn">
           </div>
           <div class="inputfield">
-            <button value="cancel" onclick="Cancel_func()" class="btn"><a style="text-decoration:none; color:white" href="{% url 'eventsview' %}" class="nav-link">Cancel</a></button>
+            <button value="cancel"  class="btn"><a style="text-decoration:none; color:white" href="{% url 'eventsview' %}" class="nav-link">Cancel</a></button>
           </div>
         </div>
     </div>	
