--- a/static/css/edit.css
+++ b/static/css/edit.css
@@ -9,6 +9,7 @@ input{
 }
 label{
     color:#6650f5;
+    font-size: 20px;
 }
 hr{
     margin-left: 4%; 
@@ -36,6 +37,7 @@ h2{
 }
 span{
     color: #6650f5;
+    font-size: 15px;
 }
 a{
     text-decoration: none;
