--- a/templates/index.html
+++ b/templates/index.html
@@ -41,17 +41,17 @@
         <h3 class="section-title">Services</h3>
         <ul class="services-content">
             <li>
-                <i><img  src="{% static 'images/icon/i1.png' %}" alt=""></i>
+                <i><img  src="{% static 'images/icon/events.jpg' %}" alt=""></i>
                 <h4>Web Design</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est, reprehenderit.</p>
             </li>
             <li>
-                <i><img  src="{% static 'images/icon/i2.png' %}" alt=""></i>
+                <i><img  src="{% static 'images/icon/booking.jpg' %}" alt=""></i>
                 <h4>Marketing</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est, reprehenderit.</p>
             </li>
             <li>
-                <i><img  src="{% static 'images/icon/i3.png' %}" alt=""></i>
+                <i><img  src="{% static 'images/icon/pay.jpg' %}" alt=""></i>
                 <h4>Graphics</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est, reprehenderit.</p>
             </li>
