--- a/templates/index.html
+++ b/templates/index.html
@@ -46,12 +46,12 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est, reprehenderit.</p>
             </li>
             <li>
-                <i><img  src="{% static 'images/icon/booking.jpg' %}" alt=""></i>
+                <i><img  src="{% static 'images/icon/i2.png' %}" alt=""></i>
                 <h4>Marketing</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est, reprehenderit.</p>
             </li>
             <li>
-                <i><img  src="{% static 'images/icon/pay.jpg' %}" alt=""></i>
+                <i><img  src="{% static 'images/icon/i3.png' %}" alt=""></i>
                 <h4>Graphics</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est, reprehenderit.</p>
             </li>
