--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
         <h3 class="section-title">Services</h3>
         <ul class="services-content">
             <li>
-                <i><img  src="{% static 'images/icon/events.jpg' %}" alt=""></i>
+                <i><img  src="{% static 'images/icon/i1.png' %}" alt=""></i>
                 <h4>Web Design</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est, reprehenderit.</p>
             </li>
