--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
         <ul class="about-content">
             <li class="about-left" style="background-image: url({% static 'images/icon/about.jpg' %}); opacity: 0.8;"></li>
             <li class="about-right">
-                <h2>About our Company</h2>
+                <h2>About our Website</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt iusto unde modi aspernatur amet blanditiis quibusdam ipsam. Veritatis, rerum, fuga.</p><a class="about-btn" href="">Learn more</a>
             </li>
         </ul>
@@ -42,17 +42,17 @@
         <ul class="services-content">
             <li>
                 <i><img  src="{% static 'images/icon/i1.png' %}" alt=""></i>
-                <h4>Web Design</h4>
+                <h4>Events</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est, reprehenderit.</p>
             </li>
             <li>
                 <i><img  src="{% static 'images/icon/i2.png' %}" alt=""></i>
-                <h4>Marketing</h4>
+                <h4>Booking</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est, reprehenderit.</p>
             </li>
             <li>
                 <i><img  src="{% static 'images/icon/i3.png' %}" alt=""></i>
-                <h4>Graphics</h4>
+                <h4>Payments</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est, reprehenderit.</p>
             </li>
             
