--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
     
         <div class=""></div>
         <h1 id="typ" class="banner-title"></h1>
-        <h3 class="banner-title">You will Amazing Event here Lorem ipsum dolor sit <br>
+        <h3 class="banner-title">You will find Amazing Event here Lorem ipsum dolor sit <br>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, adipisci!</h3><a class="neon-btn" href="{% url 'eventsview' %}"><span></span><span></span><span></span><span></span>Explore</a>
             </section>
 </div>
